# mathematics-c

./: .gitignore  CMakeLists.txt  README.md
include/mathematics_c/: mathematics.h  matrix.h  quaternion.h  vector.h
sources/: CMakeLists.txt
sources/mathematics_c/: CMakeLists.txt  mathematics.c  matrix.c  matrix_internal.h  quaternion.c  quaternion_internal.h  vector.c
src/: CMakeLists.txt  macro.h  mathematics.c  mathematics.h  matrix.c  matrix.h  vector.h  vector_internal.h
test/: CMakeLists.txt  main.c  matrix_test.c
tests/: CMakeLists.txt  main.c
tests/mathematics_c/: mathematics_test.h  matrix_test.h  quaternion_test.h  vector_test.h
